src-ken&y/objects/Custom_Tab_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Detail_Field_Set_Name__c</fullName>
        <label>Detail Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Field_Set_Object_API_Name__c</fullName>
        <label>Detail Field Set Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Header_Field_Set_Name__c</fullName>
        <label>Header Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Field_Set_Object_API_Name__c</fullName>
        <label>Header Field Set Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Read_Only_Field_Set_Name__c</fullName>
        <label>Header Read Only Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <label>Tab Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Tab Settings</label>
</CustomObject>